# syncify

./: Cargo.toml  README.md
libsyncify/: Cargo.toml
libsyncify/src/: config.rs  lib.rs
libsyncify/src/config/: keyring.rs
syncify-cli/: Cargo.toml
syncify-cli/src/: main.rs
syncify-gui/: Cargo.toml
