[package]
name = "libsyncify"
version = "0.1.0"
authors = ["Alexandre Leconte (Deleranax)", "Maxime Savary (GamerMine)"]
edition = "2024"
description = "A simple peer-to-peer, cross-platform file synchronization client"
readme = "../README.md"
repository = "https://github.com/Dwight-Studio/syncify"
license = "GPL-3"
keywords = ["p2p", "peer-to-peer", "cross-platform", "file", "sync"]
categories = ["filesystem", "gui", "command-line-interface"]
publish = false

[dependencies]
iroh = { version = "0.33.0", features = ["discovery-local-network"] }
iroh-gossip = "0.33.0"
iroh-blobs = "0.33.0"
iroh-docs = "0.33.0"
anyhow = "1.0.97"
directories = "6.0.0"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["std"] }
log = "0.4.26"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "linux-native-async-persistent", "tokio", "crypto-rust"] }